# pioneclaw

./: .env.example  .gitignore  .gitmodules  DEMO_SCRIPT.md  README.md  START_HERE.md  code-review-report-2026-05-13.md  docker-compose.yml  feature_gap_analysis.md  plan.md  quick-start.bat  quick-start.sh
backend/: .env.example  alembic.ini  apply.json  pyproject.toml  requirements.txt  test_apply.json  test_chat.json  test_config_tool.py  test_send_message_tool.py  test_skill_tool.py  test_spawn_agent_types.py  test_team_tool.py
backend/alembic/: env.py
backend/app/: init_data.py  init_roles.py  init_settings.py  main.py
backend/memory/: MEMORY.md  project-pioneerclaw-项目概览.md  project-双轨记忆架构.md  project-技术栈.md  project-核心功能模块.md
backend/tests/: conftest.py  mock_helpers.py  test_agent_loop_enhanced.py  test_agents.py  test_approvals.py  test_auth.py  test_auth_cron.py  test_bash_safety.py  test_channels.py  test_cli.py  test_compactor_fix.py  test_compactor_thresholds.py  test_compression_service.py  test_context_files.py  test_context_pruner.py  test_conversation_summarizer.py  test_cron_execution.py  test_cron_tools.py  test_dashboard.py  test_deferred_init.py  test_file_memory_tools.py  test_file_tracker.py  test_graph_rag.py  test_graph_rag_api.py  test_guardrails_hooks.py  test_handoff.py  test_injected_state_auto.py  test_interrupt.py  test_layered_memory.py  test_layered_memory_services.py  test_magic_docs.py  test_mcp_tools.py  test_memory_extractor.py  test_memory_manage.py  test_memory_path_security.py  test_memory_store.py  test_messaging.py  (+40 more)
(+376 files in other folders)
