[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pioneclaw"
version = "1.0.0"
description = "PioneClaw - 企业级智能协作平台"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "croniter>=2.0.0",
    "PyYAML>=6.0",
    "typer>=0.9.0",
    "rich>=13.0",
]

[project.scripts]
pioneclaw = "app.cli.main:main"

[tool.setuptools.packages.find]
include = ["app*"]
